--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodejs ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "~1.0.0",
     "bootstrap": "^4.3.1",
     "cookie-parser": "~1.0.1",
