--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "axios": "^0.19.0",
     "body-parser": "~1.0.0",
     "bootstrap": "^4.3.1",
+    "consign": "^0.1.6",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "ejs": "^2.6.2",
     "express": "~4.0.0",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "mysql": "^2.17.1",
     "static-favicon": "~1.0.0"
   }
 }
