--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~0.7.4",
     "ejs": "^2.6.2",
     "express": "~4.0.0",
+    "express-validator": "^2.20.8",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
     "mysql": "^2.17.1",
