--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "bootstrap": "^4.3.1",
     "consign": "^0.1.6",
     "cookie-parser": "~1.0.1",
+    "crypto": "^1.0.1",
     "debug": "~0.7.4",
     "ejs": "^2.6.2",
     "express": "~4.0.0",
     "express-validator": "^2.20.8",
     "jade": "~1.3.0",
+    "mongodb": "^2.2.29",
     "morgan": "~1.0.0",
     "mysql": "^2.17.1",
     "static-favicon": "~1.0.0"
